commit 2, com serviços e login chamando api

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -7,13 +7,13 @@
         </div>
         <form class="list">
             <label class="item item-input">
-                <input type="text" placeholder="Usuario">
+                <input type="text" placeholder="Usuario" ng-model="login.usuario">
             </label>
             <label class="item item-input">
-                <input type="password" placeholder="Senha">
+                <input type="password" placeholder="Senha" ng-model="login.password">
             </label>
         </form>
-        <a ui-sref="menu.perfil" class="handa-bg-cinzaescuro button button-dark button-block ">Entrar</a>
+        <a class="handa-bg-cinzaescuro button button-dark button-block " ng-click="Login()">Entrar</a>
         <a ui-sref="cadastro" class="handa-bg-laranjaescuro handa-btn-semborda button button-dark button-block">Cadastre-se</a>
     </ion-content>
 </ion-view>
